docs/api/qiskit/0.19/qiskit.providers.models.BackendStatus.mdx
---
title: BackendStatus (v0.19)
description: API reference for qiskit.providers.models.BackendStatus in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.BackendStatus
---

# BackendStatus

<Class id="qiskit.providers.models.BackendStatus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendstatus.py" signature="BackendStatus(backend_name, backend_version, operational, pending_jobs, status_msg)" modifiers="class">
  Class representing Backend Status.

  Initialize a BackendStatus object

  **Parameters**

  *   **backend\_name** (*str*) – The backend’s name
  *   **backend\_version** (*str*) – The backend’s version of the form X.Y.Z
  *   **operational** (*bool*) – True if the backend is operational
  *   **pending\_jobs** (*int*) – The number of pending jobs on the backend
  *   **status\_msg** (*str*) – The status msg for the backend

  **Raises**

  **QiskitError** – If the backend version is in an invalid format

  ## Attributes

  <span id="backendstatus-version-regex" />

  ### version\_regex

  <Attribute id="qiskit.providers.models.BackendStatus.version_regex" attributeValue="re.compile('[0-9]+.[0-9]+.[0-9]+$')" />

  ## Methods

  <span id="backendstatus-from-dict" />

  ### from\_dict

  <Function id="qiskit.providers.models.BackendStatus.from_dict" signature="BackendStatus.from_dict(data)" modifiers="classmethod">
    Create a new BackendStatus object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the BaseBakend to create. It will be in the same format as output by [`to_dict()`](qiskit.providers.models.BackendStatus#to_dict "qiskit.providers.models.BackendStatus.to_dict").

    **Returns**

    The BackendStatus from the input dictionary.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  <span id="backendstatus-to-dict" />

  ### to\_dict

  <Function id="qiskit.providers.models.BackendStatus.to_dict" signature="BackendStatus.to_dict()">
    Return a dictionary format representation of the BackendStatus.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    dict
  </Function>
</Class>

