docs/api/qiskit/0.44/qiskit.providers.models.BackendStatus.mdx
---
title: BackendStatus (v0.44)
description: API reference for qiskit.providers.models.BackendStatus in qiskit v0.44
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.BackendStatus
---

# BackendStatus

<Class id="qiskit.providers.models.BackendStatus" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.25/qiskit/providers/models/backendstatus.py" signature="qiskit.providers.models.BackendStatus(backend_name, backend_version, operational, pending_jobs, status_msg)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.12)")

  Class representing Backend Status.

  Initialize a BackendStatus object

  **Parameters**

  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The backend’s name
  *   **backend\_version** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The backend’s version of the form X.Y.Z
  *   **operational** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – True if the backend is operational
  *   **pending\_jobs** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – The number of pending jobs on the backend
  *   **status\_msg** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The status msg for the backend

  **Raises**

  [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – If the backend version is in an invalid format

  ## Methods

  ### from\_dict

  <Function id="qiskit.providers.models.BackendStatus.from_dict" signature="from_dict(data)" modifiers="classmethod">
    Create a new BackendStatus object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")) – A dictionary representing the BaseBakend to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.BackendStatus.to_dict "qiskit.providers.models.BackendStatus.to_dict").

    **Returns**

    The BackendStatus from the input dictionary.

    **Return type**

    [BackendStatus](#qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.BackendStatus.to_dict" signature="to_dict()">
    Return a dictionary format representation of the BackendStatus.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")
  </Function>
</Class>

